# hamMocKing

./: .gitignore  build.ps1  contribution.html  design.html  genindex.html  index.html  installation.html  motivation.html  pyproject.toml  pytest.ini  requirements.html  scoopfile.json  search.html  usage.html  usecase.html
.github/workflows/: deploy.yml  linux.yml  windows.yml
tests/: cmake.py  mini_c_test.py
tests/data/mini_c_test/: CMakeLists.txt
